# hack_jack_suite

./: .gitignore  ALU_Truth_Table.md  Cargo.toml  VM_Translation_Optimizations.md  macros.rs
asm_macro/: Cargo.toml
asm_macro/src/: lib.rs
src/: asm.rs  assembler.rs  cpu.rs  io.rs  main.rs  optimizer.rs  pong.rs  vm.rs
src/code_writer/: asm_writer.rs  assembler.rs  mod.rs  vm_writer.rs  xml_writer.rs
src/cpu/: mod.rs
src/jack_compiler/: compilation_engine.rs  mod.rs  symbol_table.rs  token_type.rs  tokenizer.rs  tokens.rs  vm_writer.rs  xml_writer.rs
src/lib/: mod.rs
src/tokens/: jack_tokens.rs  mod.rs  token_type.rs  vm_commands.rs
src/vm/: mod.rs  parser.rs  translator.rs
src/vm_translator/: code_writer.rs  mod.rs  parser.rs
