[package]
name = "hack_jack_suite"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#path = "src/lib/"
#crate-type = ["lib", "bin"]

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.70"
once_cell = "1.17.1"
clap = { version = "4.2.1", features = ["derive"] }
itertools = "0.12.*"
cargo-expand = "1.0.49"
bitbybit = "1.2.2"
arbitrary-int = "1.2.6"
sdl2 = "0.36.*"
asm_macro = { path = "asm_macro" }
